tests/spec/non_conformant/errors/fn_error/mod.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/fn-error"

#[allow(unused)]
fn runner() -> crate::TestRunner {
    super::runner().with_cwd("fn-error")
}

mod property;

mod ruleset;

mod simple;
